--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
 </head>
-<body>
+<body style="background: #2c3033; color: #606468; font: 87.5%/1.5em 'Open Sans', sans-serif;">
   <app-root></app-root>
 </body>
 </html>
